HomeController serchmonth前まで更新、タスク追加不可

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -233,6 +233,7 @@
                </tbody>
            </table>
        </div>
+       </div>
 </body>
 </html>
 <!--        <div id="updatedialog" class="modal fade" tabindex="-1">-->
