--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,6 +15,8 @@
         <input name="task" class="form-control"　type="text" id="new_task" />
         <label class="form-label">期限</label>
         <input class="form-control" name="deadline" type="date" id="new_deadline"/>
+        <label class="form-label">メモ</label>
+        <input name="memo" class="form-control"　type="text" id="new_memo" />
         <input type="submit" value="登録" onclick="restAdd();" />
         <!--    </form>-->
     </div>
@@ -32,8 +34,9 @@
 <!--            </form>-->
 <!--        </div>-->
 
-        <div class="tasklist">
-            <div class="">
+<!--        <div class="tasklist">-->
+<!--            <div class="">-->
+    <div>
             <h2>現在のタスク一覧</h2>
 <!--                <div>-->
 <!--                    <form action="/search_month">-->
@@ -46,17 +49,17 @@
 <!--                    </form>-->
 <!--                </div>-->
 <!--            <table border ="1" >-->
-                <table class="table table-striped">
-                    <thead>
-                    <tr>
+            <table class="table table-striped">
+               <thead>
+                   <tr>
                         <th>ID</th>
                         <th>タスク</th>
                         <th>期限</th>
                         <th>メモ</th>
                         <th>状態</th>
                         <th style="colspan:2">更新・削除</th>
-                    </tr>
-                    </thead>
+                   </tr>
+               </thead>
 <!--                <thead>-->
 <!--                <tr><th class="hidden">ID</th>-->
 <!--                    <th>タスク</th>-->
@@ -65,8 +68,8 @@
 <!--                    <th></th>-->
 <!--                </tr>-->
 <!--                </thead>-->
-                    <tbody id="task_list_body">
-                    <tr th:each="task : ${taskList}" name="task_list_row">
+               <tbody id="task_list_body">
+                   <tr th:each="task : ${taskList}" name="task_list_row">
                         <td th:text="${task.id}"></td>
                         <td th:text="${task.task}"></td>
                         <td th:text="${task.deadline}"></td>
@@ -98,10 +101,10 @@
 <!--                            <button type = "submit" id="delete_button">削除</button>-->
 <!--                            <input type="hidden" name="id" th:value="${task.id}" />-->
 <!--                        </form>-->
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+<!--                    </td>-->
+                   </tr>
+                </tbody>
+            </table>
     </div>
        <div id="updatedialog" class="modal fade" tabindex="-1">
             <div class="modal-dialog">
@@ -127,11 +130,11 @@
                             <div class="modal-footer">
                                 <button type="submit" class="btn btn-primary">更新</button>
                                 <button type="reset" data-bs-dismiss="modal" class="btn btn-secondary">キャンセル</button>
-                            </div>
-                        </form>
-                    </div>
+                           </div>
+                     </form>
                 </div>
             </div>
+       </div>
 
 <!--                <div id="updatedialog" class="modal fade" tabindex="-1">-->
 <!--                    <div class="modal-dialog">-->
@@ -163,7 +166,7 @@
 <!--                    </div>-->
 <!--                </div>-->
 
- <script language="JavaScript">
+<script language="JavaScript">
     function copyToDialog(row){
         var children = $(row).children();
         $('#update_id').val($(children)[0].textContent);
@@ -177,35 +180,31 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.0/dist/jquery.min.js"></script>
 <script>
-
     function restAdd(){
         var new_task = $("#new_task").val();
         var new_deadline = $("#new_deadline").val();
         var new_memo = $("#new_memo").val();
-        $.ajax({
+       $.ajax({
           type: "POST",
           url: "/rest_add",
           data: { task: new_task, deadline: new_deadline, memo: new_memo }
         }).done(function( msg ) {
-          $("#task_list_body").empty();   //テーブルクリア
+          $("#task_list_body").empty();
           for(var i=0; i<msg.length; i++){
             var id = msg[i].id;
             var task = msg[i].task;
             var deadline = msg[i].deadline;
-            var task = msg[i].memo;
+            var memo = msg[i].memo;
             var done = msg[i].done;
 
-            $obj = $("#table_row").clone();  //追加する行のデータをコピー
-            //ここにid,task,deadline,doneのセット処理を記述
+            $obj = $("#table_row").clone();
             $obj.find("[name=id]").text(id);
             $obj.find("[name=task]").text(task);
             $obj.find("[name=deadline]").text(deadline);
             $obj.find("[name=memo]").text(memo);
-            //完了・未完了を三項演算子でセット
             $obj.find("[name=done]").text(done ? "完了" : "未完了");
-            //ボタンに付加されていたグローバル属性のhiddenを削除してボタン用を見えるように修正
             $obj.find("button").removeAttr('hidden');
-            $("#task_list_body").append($obj); //テーブルに行を追加
+            $("#task_list_body").append($obj);
           }
         });
     }
@@ -220,7 +219,7 @@
                       <td name="memo"></td>
                       <td name="done"></td>
                       <td> <!-- ボタン要素にhidden属性を付加して消えてなかった対応 -->
-                                <button type="submit" name="update_button" onclick="copyToDialog(this.parentElement.parentElement);" data-bs-toggle="modal" data-bs-target="#updatedialog" class="col btn btn-primary btn-sm" hidden>更新</button>
+                          <button type="submit" name="update_button" onclick="copyToDialog(this.parentElement.parentElement);" data-bs-toggle="modal" data-bs-target="#updatedialog" class="col btn btn-primary btn-sm" hidden>更新</button>
                       </td>
                       <td>
                       </td>
@@ -232,7 +231,6 @@
                   </tr>
                </tbody>
            </table>
-       </div>
        </div>
 </body>
 </html>
