--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -52,13 +52,15 @@
            <div>
                <form action="/find_incomplete">
                    <div class="form-check">
-                       <div class="col">
-                       <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                       <label class="form-check-label" for="flexCheckDefault">
+<!--               <div class="col">//改行-->
+                       <input class="form-check-default" type="checkbox" name ="done" value="false" id="flexCheckDefault">
+                        <label class="form-check-label" for="flexCheckDefault">
+<!--                        <div class="col"><input type="incomplete" name="incomplete"/></div>-->
                            未完了
                        </label>
                           <button type="submit" name="serch_button" class="col btn btn-secondary btn-sm">検索</button>
-                       </div>
+<!--                          <div class="col"><input type="incomplete" name="incomplete"/></div>-->
+<!--                       </div>-->
                     </div>
                </form>
            </div>
