--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -38,32 +38,34 @@
 <!--            <div class="">-->
     <div>
         <h2>現在のタスク一覧</h2>
-           <div>
-               <form action="/search_month">
-                   <div class="row">
-                      <div class="col"><input type="month" name="month"/></div>
-                          <div class="col">
-                              <button type="submit" name="search_button" class="col btn btn-secondary btn-sm">検索</button>
-                          </div>
-                   </div>
-               </form>
-           </div>
-
-           <div>
-               <form action="/find_incomplete">
-                   <div class="form-check">
-<!--               <div class="col">//改行-->
-                       <input class="form-check-default" type="checkbox" name ="done" value="false" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
-<!--                        <div class="col"><input type="incomplete" name="incomplete"/></div>-->
-                           未完了
-                       </label>
-                          <button type="submit" name="serch_button" class="col btn btn-secondary btn-sm">検索</button>
-<!--                          <div class="col"><input type="incomplete" name="incomplete"/></div>-->
-<!--                       </div>-->
+        <div>
+            <form action="/search_month">
+                <div class="row">
+                    <div class="col"><input type="month" name="month"/></div>
+                    <!--                       <div class="form-check">-->
+<!--                    <div class="col">-->
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" name="check" value="on"
+                               id="flexCheckDefault"/>
+                        <label class="form-check-label" for="flexCheckDefault">未完了</label>
+<!--                        <input class="form-check-input" type="hidden" name="check" value="off"-->
+<!--                               id="flexCheckDefault"/>-->
                     </div>
-               </form>
-           </div>
+                        <!--                        <div class="col"><input type="incomplete" name="incomplete"/></div>--
+                                                   </label>
+                                                   <button type="submit" name="serch_button" class="col btn btn-secondary btn-sm">検索</button>-->
+                        <!--                          <div class="col"><input type="incomplete" name="incomplete"/></div>-->
+                </div>
+                <button type="submit" name="search_button" class="col btn btn-secondary btn-sm">検索</button>
+            </form>
+    </div>
+
+
+<!--           <div>-->
+<!--               <form action="/find_incomplete">-->
+<!--                   -->
+<!--               </form>-->
+<!--           </div>-->
 
            <table border ="1" >
            <table class="table table-striped">
